Update index.html and cause an a11y error

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
     rel="stylesheet"
   >
-  <title>Demo Shop</title>
+  <title></title>
 </head>
 
 <body>
